--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,12 +28,14 @@ jobs:
       - uses: codecov/codecov-action@v3
         with:
           files: coverage.out
-  docker:
-    name: docker
+  build:
+    name: build
     runs-on: ubuntu-latest
     needs:
       - lint
       - test
+    permissions:
+      packages: write
     steps:
       - uses: actions/checkout@v3
       - uses: docker/setup-buildx-action@v2
