--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -8,11 +8,19 @@ jobs:
     name: golangci-lint
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-go@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
         with:
           go-version: "1.25"
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v3
+
+      - name: Install golangci-lint
+        uses: golangci/golangci-lint-action@v6
         with:
-          version: latest
+          version: v1.58.0
+          args: --timeout=5m
+
+      - name: Run golangci-lint
+        run: golangci-lint run
