--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,24 +6,27 @@ on:
     tags: [ "**" ]
 
 jobs:
-  build:
-    name: build
+  docker-build:
+    name: docker-build
     runs-on: ubuntu-latest
-    needs:
-      - lint
-      - test
     permissions:
       packages: write
     steps:
       - uses: actions/checkout@v4
-      - uses: docker/setup-buildx-action@v2
-      - uses: docker/setup-qemu-action@v2
+        with:
+          ref: main
       - uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - uses: docker/bake-action@v2
+      - uses: docker/setup-qemu-action@v3
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/build-push-action@v6
         with:
-          files: "build/package/docker-bake.json"
+          context: .
+          file: ./Dockerfile
           push: true
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:${{ github.ref_name }}
+            ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:latest
